Added backpusher to client

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,9 +22,11 @@
   </article>
 
   <script type="text/template" id='message-template'></script>
+  <script src="http://js.pusherapp.com/1.9/pusher.min.js"></script>
   <script src='node_modules/underscore/underscore-min.js'></script>
   <script src='node_modules/jquery/dist/jquery.min.js'></script>
   <script src='node_modules/backbone/backbone-min.js'></script>
+  <script src='/javascripts/backpusher.js'></script>
   <script src='js/backchat.js'></script>
   <script src='js/models/message.js'></script>
   <script src='js/collections/messages.js'></script>
