Pusher now working on the clientside

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
   </article>
 
   <script type="text/template" id='message-template'></script>
-  <script src="http://js.pusherapp.com/1.9/pusher.min.js"></script>
+  <script src="https://js.pusher.com/3.2/pusher.min.js"></script>
   <script src='node_modules/underscore/underscore-min.js'></script>
   <script src='node_modules/jquery/dist/jquery.min.js'></script>
   <script src='node_modules/backbone/backbone-min.js'></script>
