--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,6 +26,9 @@
   <script src='node_modules/underscore/underscore-min.js'></script>
   <script src='node_modules/jquery/dist/jquery.min.js'></script>
   <script src='node_modules/backbone/backbone-min.js'></script>
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/main.css">
+
   <script src='/javascripts/backpusher.js'></script>
   <script src='js/backchat.js'></script>
   <script src='js/models/message.js'></script>
