Automatically scrolls to bottom of messages list

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-  <article id='backchat-app container'>
+  <article id='backchat-app'>
     <div class='row'>
       <section id='messages-list' class='col-md-4 col-md-offset-4 messages-list'></section>
     </div>
