--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,47 +1,105 @@
 body {
-  background-color: #5cbe4a; }
+  background: url("https://s-media-cache-ak0.pinimg.com/originals/f2/50/62/f25062b96c7c06f256ad232a84916550.jpg") center no-repeat; }
+
+.outer-phone .inner-phone, .input-area {
+  box-shadow: inset 0px 0px 3px 1px #000000;
+  -moz-box-shadow: inset 0px 0px 3px 1px #000000;
+  -webkit-box-shadow: inset 0px 0px 3px 1px #000000; }
+
+.outer-phone .phone-marginals .home-button, .message {
+  box-shadow: inset 0px 0px 2px 1px gray;
+  -moz-box-shadow: inset 0px 0px 2px 1px gray;
+  -webkit-box-shadow: inset 0px 0px 2px 1px gray; }
+
+.outer-phone .inner-phone {
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#5cbe4a+11,319177+48,5cbe4a+98 */
+  background: #5cbe4a;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #5cbe4a 11%, #319177 48%, #5cbe4a 98%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #5cbe4a 11%, #319177 48%, #5cbe4a 98%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #5cbe4a 11%, #319177 48%, #5cbe4a 98%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5cbe4a', endColorstr='#5cbe4a',GradientType=0 );
+  /* IE6-9 */ }
+
+.message {
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f6f8f9+0,e5ebee+50,d7dee3+79,f5f7f9+100 */
+  background: #f6f8f9;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #f6f8f9 0%, #e5ebee 50%, #d7dee3 79%, #f5f7f9 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #f6f8f9 0%, #e5ebee 50%, #d7dee3 79%, #f5f7f9 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #f6f8f9 0%, #e5ebee 50%, #d7dee3 79%, #f5f7f9 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f8f9', endColorstr='#f5f7f9',GradientType=0 );
+  /* IE6-9 */ }
+
+.input-field {
+  border: 1px solid black; }
+
+.messages-section {
+  height: 50em; }
 
 .messages-list {
-  height: 65%;
+  height: 60%;
   overflow: scroll;
   padding: 30px; }
 
+.outer-phone {
+  background-color: black;
+  border-radius: 30px; }
+  .outer-phone .phone-marginals {
+    height: 75px; }
+    .outer-phone .phone-marginals .home-button {
+      border-radius: 50%;
+      height: 55px;
+      margin-top: 10px;
+      width: 55px; }
+      .outer-phone .phone-marginals .home-button .home-square {
+        color: gray;
+        font-size: 4em;
+        line-height: 39px;
+        text-align: center; }
+  .outer-phone .inner-phone {
+    margin-left: 30px;
+    margin-right: 30px; }
+
 .message {
-  background-color: white;
-  border-radius: 30%;
+  border-radius: 12px;
   list-style: none;
   margin-top: 15px;
-  padding: 30px; }
+  padding: 15px; }
   .message .author {
-    font-size: 2em;
+    font-size: 1.4em;
     font-weight: 900; }
   .message .content {
-    font-size: 1.5em;
-    margin-left: 15px; }
-
-.author-input {
-  font-size: 2em; }
-
-.content-input {
-  font-size: 4em; }
-
-.input-area {
-  border: black 1px solid;
-  border-radius: 10px; }
-  .input-area .submit {
-    border-radius: 10px;
-    font-size: 2em;
-    margin-top: 20px; }
+    margin-top: 10px; }
 
 .input-field {
-  border-radius: 11px;
-  padding: 15px; }
+  border-radius: 12px;
+  padding: 10px;
+  width: 100%; }
+
+.content-input {
+  resize: none; }
+
+.small-margin-top {
+  margin-top: 10px; }
 
 .medium-margin-top {
   margin-top: 15px; }
 
 .large-margin-top {
   margin-top: 30px; }
+
+.large-margin-bottom {
+  margin-bottom: 30px; }
+
+.no-padding-left {
+  padding-left: 0; }
 
 .medium-padding {
   padding: 15px; }
