--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,30 +6,44 @@
 
   <article id='backchat-app' data-key='<%= pusherKey %>'>
     <div class='row'>
-      <section id='messages-list' class='col-md-4 col-md-offset-4 messages-list'></section>
-    </div>
+      <div class='col-md-4 col-md-offset-4 messages-section large-margin-top large-margin-bottom'>
+        <div class='outer-phone'>
+          <div class='phone-marginals'></div>
+          <div class='inner-phone'>
+            <div id='messages-list' class='messages-list'></div>
 
-    <section class='col-md-12 large-margin-top'>
-      <div class='col-md-4'></div>
+            <section class='input-area medium-padding'>
+              <div class='row'>
+                <div class='col-md-4'>
+                  <input placeholder='Name...' type='text' class='author-input input-field' id='new-author' />
+                </div>
+              </div>
 
-      <div class='col-md-5 input-area medium-padding'>
-        <div class='row'>
-          <div class='col-md-6'>
-            <input placeholder='Your name' type='text' class='author-input input-field' id='new-author' />
+              <div class='row medium-margin-top'>
+                <div class='col-md-10'>
+                  <textarea placeholder='Message...' class='content-input input-field' id='new-content'></textarea>
+                </div>
+                <div class='col-md-2 no-padding-left'>
+                  <div class='large-margin-top'>
+                    <button class='submit btn btn-primary' id='submit'>Send</button>
+                  </div>
+                </div>
+              </div>
+            </section>
+
           </div>
-          <div class='col-md-6'>
-            <button class='submit col-md-4 btn btn-primary' id='submit'>Submit</button>
-          </div>
-        </div>
-
-        <div class='row medium-margin-top'>
-          <div class='col-md-6'>
-            <input placeholder='Message' type='text' class='content-input input-field' id='new-content' />
+          <div class='phone-marginals'>
+            <div class='row'>
+              <div class='col-md-offset-5 col-md-2'>
+                <div class='home-button'>
+                  <div class='home-square'>□</div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-
-    </section>
+    </div>
   </article>
 
   <script type="text/template" id='message-template'>
