Can hit enter to send a message

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -40,8 +40,8 @@ body {
 .input-field {
   border: 1px solid black; }
 
-.messages-section {
-  height: 50em; }
+.phone-section {
+  height: 90vh; }
 
 .messages-list {
   height: 60%;
