--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 
   <article id='backchat-app' data-key='<%= pusherKey %>'>
     <div class='row'>
-      <div class='col-md-4 col-md-offset-4 messages-section large-margin-top large-margin-bottom'>
+      <div class='col-md-4 col-md-offset-4 phone-section large-margin-top large-margin-bottom'>
         <div class='outer-phone'>
           <div class='phone-marginals'></div>
           <div class='inner-phone'>
