--- a/scss/main.scss
+++ b/scss/main.scss
@@ -54,8 +54,8 @@ body {
   border: 1px solid $black;
 }
 
-.messages-section {
-  height: 50em;
+.phone-section {
+  height: 90vh;
 }
 
 .messages-list {
