--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,7 @@
                 <div class='col-md-4'>
                   <input placeholder='Name...' type='text' class='author-input input-field' id='new-author' />
                 </div>
+                <div class='col-md-offset-5 col-md-3 user-typing'></div>
               </div>
 
               <div class='row medium-margin-top'>
