--- a/public/css/main.css
+++ b/public/css/main.css
@@ -40,6 +40,10 @@ body {
 .input-field {
   border: 1px solid black; }
 
+.typing-icon {
+  background: url("/images/typing.svg") no-repeat center;
+  height: 40px; }
+
 .phone-section {
   height: 90vh; }
 
